Final working commit

--- a/SalesOrderManager/SalesOrderManager.csproj
+++ b/SalesOrderManager/SalesOrderManager.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>4fc64468-907a-4d98-95b2-030937eaedbe</ProjectGuid>
+    <ProjectGuid>{4FC64468-907A-4D98-95B2-030937EAEDBE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SalesOrderManager</RootNamespace>
@@ -31,24 +31,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="OrderManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SalesOrderDAL\SalesOrderDAL.csproj">
+      <Project>{0a98c031-5b2a-4114-9621-2ca0c2de8960}</Project>
+      <Name>SalesOrderDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SalesOrderEntities\SalesOrderEntities.csproj">
+      <Project>{a2a47311-f27c-40d7-9cce-4aa51ea4c7cb}</Project>
+      <Name>SalesOrderEntities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SalesOrderExceptions\SalesOrderExceptions.csproj">
+      <Project>{a4a954a7-3b87-41de-89c2-2e94a23d1257}</Project>
+      <Name>SalesOrderExceptions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
