--- a/SalesOrderDAL/SalesOrderDAL.csproj
+++ b/SalesOrderDAL/SalesOrderDAL.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OrderDetails.cs" />
+    <Compile Include="IDataAccess.cs" />
+    <Compile Include="ORDERDBEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
